--- a/plugin/global/settings/请读我.md
+++ b/plugin/global/settings/请读我.md
@@ -50,7 +50,7 @@
 简单来说，一级插件从 settings.XXX.toml 获取配置项，二级插件（`常用插件->自定义插件` 下的插件）从 custom_plugin.XXX.toml 获取配置项。
 
 > 为何如此设计：区分 `用户插件` 和 `默认插件`。本插件系统提供了开放能力，用户可以自定义插件，其中自定义插件的配置就要写在 `custom_plugin.user.toml`。
-
+<!-- 这个设计模式可以借鉴一下 -->
 
 
 ### hotkey.XXX.toml 的功能是什么？
